--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@svgr/webpack": "^8.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.1",
-    "next": "^14.2.14",
+    "next": ">=14.2.21",
+    "next-seo": "^6.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
